fix: set states hidden by default

--- a/public/output-style.css
+++ b/public/output-style.css
@@ -682,6 +682,10 @@ video {
   display: grid;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-screen {
   height: 100vh;
 }
